work with large board

--- a/QueensEight.Web/Views/Home/Index.cshtml
+++ b/QueensEight.Web/Views/Home/Index.cshtml
@@ -4,9 +4,9 @@
 
 
 <div class="header"></div>
-<div class="board board-small">
+<div class="board board-large">
     <div>
-        <div class="cell"><i class="icon-star"></i></div>
+        <div class="cell"></div>
         <div class="cell cell-alt"></div>
         <div class="cell"></div>
         <div class="cell cell-alt"></div>
@@ -30,7 +30,7 @@
         <div class="cell cell-alt"></div>
         <div class="cell"></div>
         <div class="cell cell-alt"></div>
-        <div class="cell"><i class="icon-star"></i></div>
+        <div class="cell"></div>
         <div class="cell cell-alt"></div>
         <div class="cell"></div>
         <div class="cell cell-alt"></div>
