--- a/QueensEight.Web/Views/Shared/_Layout.cshtml
+++ b/QueensEight.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link href="~/Content/site.less" rel="stylesheet" type="text/css" />
 
 </head>
-<body>
+<body ng-app>
     @RenderBody()
 
     @Scripts.Render("~/bundles/vendor")
