--- a/QueensEight.Web/Views/Shared/_Layout.cshtml
+++ b/QueensEight.Web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
 
-    <link href="~/Content/site.less" rel="stylesheet" type="text/css" />
+    <link href="~/Content/site.css" rel="stylesheet" type="text/css" />
 
 </head>
 <body ng-app>
