--- a/QueensEight.Web/Content/Site.less
+++ b/QueensEight.Web/Content/Site.less
@@ -36,7 +36,7 @@ body {
 .board-small {
     height: @boardSizeSmall;
     width: @boardSizeSmall;
-    margin: 0 auto;
+    margin: 0 auto 25px auto;
     .cell {
       height: @cellSizeSmall;
       width: @cellSizeSmall;
