--- a/QueensEight.Web/Views/Home/Index.cshtml
+++ b/QueensEight.Web/Views/Home/Index.cshtml
@@ -4,86 +4,262 @@
 
 
 <div class="header"></div>
-<div class="board board-large">
-    <div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-    </div>
-    <div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-    </div>
-    <div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-    </div>
-    <div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-    </div>
-    <div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-    </div>
-    <div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-    </div>
-    <div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-    </div>
-    <div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-        <div class="cell cell-alt"></div>
-        <div class="cell"></div>
-    </div>           
+<div class="container">
+    <div class="row">
+        <div class="span2">
 
+            <div class="board board-small">
+                 <div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                </div>
+                <div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                </div>
+                <div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                </div>
+                <div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                </div>
+                <div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                </div>
+                <div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                </div>
+                <div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                </div>
+                <div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                </div>               
+            </div>
+    
+            <div class="board board-small">
+                 <div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                </div>
+                <div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                </div>
+                <div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                </div>
+                <div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                </div>
+                <div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                </div>
+                <div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                </div>
+                <div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                </div>
+                <div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                </div>               
+            </div>
+                    
+        </div>
+        <div class="span10">
+            <div class="board board-large">
+                <div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                </div>
+                <div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                </div>
+                <div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                </div>
+                <div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                </div>
+                <div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                </div>
+                <div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                </div>
+                <div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                </div>
+                <div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                    <div class="cell cell-alt"></div>
+                    <div class="cell"></div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
 </div>
