add parameters to directives

--- a/QueensEight.Web/Views/Home/Index.cshtml
+++ b/QueensEight.Web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
             <div class="board board-small"> </div>
         </div>
         <div class="span10">
-            <div class="board board-large"></div>
+            <div class="board board-large" ng-controller="BoardSelectionController"></div>
         </div>
 
     </div>
