--- a/QueensEight.Web/Views/Home/Index.cshtml
+++ b/QueensEight.Web/Views/Home/Index.cshtml
@@ -7,14 +7,14 @@
 <div class="container" ng-app="QueensEight">
     <div class="row">
         <div class="span2">
-            <div class="board board-small"> </div>
-            <div class="board board-small"> </div>
-            <div class="board board-small"> </div>
-            <div class="board board-small"> </div>
-            <div class="board board-small"> </div>
+            <div class="board board-small" ng-controller="BoardController"> </div>
+            <div class="board board-small" ng-controller="BoardController"> </div>
+            <div class="board board-small" ng-controller="BoardController"> </div>
+            <div class="board board-small" ng-controller="BoardController"> </div>
+            <div class="board board-small" ng-controller="BoardController"> </div>
         </div>
         <div class="span10">
-            <div class="board board-large" ng-controller="BoardSelectionController"></div>
+            <div class="board board-large" ng-controller="BoardController"></div>
         </div>
 
     </div>
