split off interactive behavior

--- a/QueensEight.Web/Views/Home/Index.cshtml
+++ b/QueensEight.Web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
             <div class="board board-small" ng-controller="BoardController"> </div>
         </div>
         <div class="span10">
-            <div class="board board-large" ng-controller="BoardController"></div>
+            <div class="board board-large" interactive ng-controller="BoardController"></div>
         </div>
 
     </div>
