--- a/QueensEight.Web/Content/Site.less
+++ b/QueensEight.Web/Content/Site.less
@@ -62,3 +62,18 @@ body {
 .dark {
     background-color: rgba(77,38,22,.6);
 }
+
+.footer {
+  background-color: darken(#8D6C58,10%);
+  border-top: 2px solid #4d2616;
+  padding: 10px 0;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  .logo {
+    width: 150px;
+    height: auto;
+    padding-left: 820px;
+  }
+
+}
