--- a/QueensEight.Web/Content/Site.css
+++ b/QueensEight.Web/Content/Site.css
@@ -5311,3 +5311,16 @@ body {
 .dark {
   background-color: rgba(77, 38, 22, 0.6);
 }
+.footer {
+  background-color: #6e5444;
+  border-top: 2px solid #4d2616;
+  padding: 10px 0;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+.footer .logo {
+  width: 150px;
+  height: auto;
+  padding-left: 820px;
+}
