--- a/QueensEight.Web/Views/Home/Index.cshtml
+++ b/QueensEight.Web/Views/Home/Index.cshtml
@@ -18,3 +18,8 @@
         </div>
     </div>
 </div>
+    <div class="footer" >
+        <div class="logo">
+            <img src="~/Content/images/Arana.png"/>
+        </div> 
+    </div>
