--- a/QueensEight.Web/Content/Site.less
+++ b/QueensEight.Web/Content/Site.less
@@ -33,6 +33,9 @@ body {
       img {
         height: 65px; width: 65px;
         margin: 5px;
+      };
+      i {
+        display: none;
       }
     }
 }
@@ -48,6 +51,7 @@ body {
           margin-top: -2px;
           margin-left: -1px;
           color: #4d2616;
+          background-image: url(images/glyphicons-halflings.png);
         }
       img {
         display: none;
