--- a/QueensEight.Web/Views/Home/Index.cshtml
+++ b/QueensEight.Web/Views/Home/Index.cshtml
@@ -4,14 +4,10 @@
 
 
 <div class="header"></div>
-<div class="container" ng-app="QueensEight">
+<div class="container" ng-controller="GameController">
     <div class="row">
-        <div class="span2">
-            <div class="board board-small" ng-controller="BoardController"> </div>
-            <div class="board board-small" ng-controller="BoardController"> </div>
-            <div class="board board-small" ng-controller="BoardController"> </div>
-            <div class="board board-small" ng-controller="BoardController"> </div>
-            <div class="board board-small" ng-controller="BoardController"> </div>
+        <div class="span2" ng-controller="SolutionsController">
+            <div class="board board-small" ng-repeat="solution in solutions" ng-controller="BoardController"> </div>
         </div>
         <div class="span10">
             <div class="board board-large" interactive ng-controller="BoardController"></div>
