--- a/QueensEight.Web/Views/Shared/_Layout.cshtml
+++ b/QueensEight.Web/Views/Shared/_Layout.cshtml
@@ -8,10 +8,11 @@
     <link href="~/Content/site.css" rel="stylesheet" type="text/css" />
 
 </head>
-<body>
+<body ng-app="QueensEight">
     @RenderBody()
 
     @Scripts.Render("~/bundles/vendor")
+    <script src="signalr/hubs" type="text/javascript"></script>
     @Scripts.Render("~/bundles/queenseight")
     @RenderSection("scripts", required: false)
 </body>
