broadcast and static collection based persistence

--- a/QueensEight.Web/Content/Site.css
+++ b/QueensEight.Web/Content/Site.css
@@ -5303,7 +5303,7 @@ body {
 .board-small .cell i {
   margin-top: -2px;
   margin-left: -1px;
-  color: #4d2616;
+  color: #651401;
   background-image: url(images/glyphicons-halflings.png);
 }
 .board-small .cell img {
