--- a/QueensEight.Web/Content/Site.less
+++ b/QueensEight.Web/Content/Site.less
@@ -50,7 +50,7 @@ body {
       i {
           margin-top: -2px;
           margin-left: -1px;
-          color: #4d2616;
+          color: #651401;
           background-image: url(images/glyphicons-halflings.png);
         }
       img {
