really wanted a clear button

--- a/QueensEight.Web/Views/Home/Index.cshtml
+++ b/QueensEight.Web/Views/Home/Index.cshtml
@@ -13,6 +13,7 @@
             <div class="board board-large" interactive></div>
             <div>
                 <button ng-click="requestSolution()">Request Solution</button>
+                <button ng-click="clearBoard()">Clear Board</button>
             </div>
         </div>
     </div>
