--- a/QueensEight.Web/Content/Site.less
+++ b/QueensEight.Web/Content/Site.less
@@ -1,83 +1,167 @@
-﻿@import "less/bootstrap.less"; 
+﻿@import "less/variables.less";
+@import "variables.less";
+@import "less/mixins.less";
+@import "mixins.less";
 
-@cellCount: 8;
+// CSS Reset
+@import "less/reset.less";
 
-@boardSizeLarge: 600px;
-@cellSizeLarge: @boardSizeLarge/@cellCount;
+// Grid system and page structure
+@import "less/scaffolding.less";
+@import "less/grid.less";
+@import "less/layouts.less";
 
-@boardSizeSmall: 104px;
-@cellSizeSmall: @boardSizeSmall/@cellCount;
+// Base CSS
+@import "less/type.less";
+@import "less/code.less";
+@import "less/forms.less";
+@import "less/tables.less";
+
+// Components: common
+@import "less/sprites.less";
+@import "less/dropdowns.less";
+@import "less/wells.less";
+@import "less/component-animations.less";
+@import "less/close.less";
+
+// Components: Buttons & Alerts
+@import "less/buttons.less";
+@import "less/button-groups.less";
+@import "less/alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
+
+// Components: Nav
+@import "less/navs.less";
+@import "less/navbar.less";
+@import "less/breadcrumbs.less";
+@import "less/pagination.less";
+@import "less/pager.less";
+
+// Components: Popovers
+@import "less/modals.less";
+@import "less/tooltip.less";
+@import "less/popovers.less";
+
+// Components: Misc
+@import "less/thumbnails.less";
+@import "less/media.less";
+@import "less/labels-badges.less";
+@import "less/progress-bars.less";
+@import "less/accordion.less";
+@import "less/carousel.less";
+@import "less/hero-unit.less";
+
+// Utility classes
+@import "less/utilities.less"; // Has to be last to override when necessary
+
+@font-face {
+  .font-face('Libra BT Regular', 'libra_bt');
+}
+
+.btn {
+  font-weight: bold;
+  font-family: @altFontFamily;
+  text-transform: lowercase;
+}
+.btn-primary {
+  .buttonBackground(@btnPrimaryBackground, @btnPrimaryBackgroundHighlight, @btnPrimaryBorder, 0 1px 1px rgba(255,255,255,.75));
+  border: 1px solid @btnPrimaryBorder;
+  *border: 0; // Remove the border to prevent IE7's black border on input:focus
+  border-bottom-color: darken(@btnPrimaryBorder, 10%);
+}
+.btn-large {
+  font-size: @baseFontSize * 1.5;
+  line-height: @baseLineHeight * 1.5;
+}
+
+html, body {
+  height: 100%;
+}
+
+.main_content {
+  min-height: 100%;
+  height: auto;
+  margin-bottom: -80px;
+}
 
 body {
-    background: url(images/leather.gif) repeat top right;
+  background: url(images/leather.gif) repeat top right;
 }
 
 .header {
-    background: url(images/banner.png);
-    height: 200px;
-    width: 1024px;
-    margin: 20px auto;
-}
-.board {
-    background: url(images/wood.png);
+  background: url(images/banner.png);
+  height: 200px;
+  width: 1024px;
+  margin: 20px auto;
 }
 
+.board {
+  background: url(images/wood.png);
+}
+
+
 .board-large {
-    height: @boardSizeLarge;
-    width: @boardSizeLarge;
-    margin-top: 30px;
-    margin: 0 auto;
-    .cell {
-      height: @cellSizeLarge;
-      width: @cellSizeLarge;
-      img {
-        height: 65px; width: 65px;
-        margin: 5px;
-      };
-      i {
-        display: none;
-      }
+  .board(@cellSizeLarge);
+
+  .cell {
+    img {
+      .square(65px);
+      margin: 5px;
     }
+
+    i {
+      display: none;
+    }
+  }
 }
 
 .board-small {
-    height: @boardSizeSmall;
-    width: @boardSizeSmall;
-    margin: 0 auto 25px auto;
-    .cell {
-      height: @cellSizeSmall;
-      width: @cellSizeSmall;
-      i {
-          margin-top: -2px;
-          margin-left: -1px;
-          color: #651401;
-          background-image: url(images/glyphicons-halflings.png);
-        }
-      img {
-        display: none;
-      }
-   }
-}
+  .board(@cellSizeSmall);
 
+  .cell {
+    i {
+      margin-top: -2px;
+      margin-left: -1px;
+      color: #1e1e1e;
+      background-image: url(images/glyphicons-halflings.png);
+    }
+
+    img {
+      display: none;
+    }
+  }
+}
+.board-actions {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  .text-center;
+}
 .cell {
-    float: left;
+  float: left;
 }
 
 .dark {
-    background-color: rgba(77,38,22,.6);
+  background-color: rgba(77,38,22,.6);
+}
+
+.footer-push {
+  .clearfix;
+  height: 160px;
 }
 
 .footer {
-  background-color: darken(#8D6C58,10%);
+  .clearfix();
+  height: 60px;
+  background-color: @brownBlack;
   border-top: 2px solid #4d2616;
   padding: 10px 0;
-  position: absolute;
   width: 100%;
-  bottom: 0;
+
+  .container {
+    .text-right;
+  }
+
   .logo {
     width: 150px;
     height: auto;
-    padding-left: 820px;
   }
-
 }
