--- a/QueensEight.Web/Content/variables.less
+++ b/QueensEight.Web/Content/variables.less
@@ -34,6 +34,7 @@
 @brown:                 #6b2b00;
 @brownGray:             #8b6a56;
 @brownBlack:            darken(@brownGray, 40%);
+@brownLight:            #ead5b7;
 
 // Scaffolding
 // -------------------------
