--- a/QueensEight.Web/Content/Site.less
+++ b/QueensEight.Web/Content/Site.less
@@ -18,7 +18,8 @@
 @import "less/tables.less";
 
 // Components: common
-@import "less/sprites.less";
+// @import "less/sprites.less";
+@import "font-awesome/font-awesome.less";
 @import "less/dropdowns.less";
 @import "less/wells.less";
 @import "less/component-animations.less";
@@ -62,16 +63,20 @@
   font-family: @altFontFamily;
   text-transform: lowercase;
 }
+
 .btn-primary {
   .buttonBackground(@btnPrimaryBackground, @btnPrimaryBackgroundHighlight, @btnPrimaryBorder, 0 1px 1px rgba(255,255,255,.75));
   border: 1px solid @btnPrimaryBorder;
   *border: 0; // Remove the border to prevent IE7's black border on input:focus
   border-bottom-color: darken(@btnPrimaryBorder, 10%);
 }
+
 .btn-large {
   font-size: @baseFontSize * 1.5;
   line-height: @baseLineHeight * 1.5;
 }
+
+.legal { font-size: 70%; line-height: 140%; a { color: @white; }}
 
 html, body {
   height: 100%;
@@ -84,57 +89,74 @@ html, body {
 }
 
 body {
-  background: url(images/leather.gif) repeat top right;
+  background: url(images/leather@1x.jpg) repeat top right;
 }
 
 .header {
-  background: url(images/banner.png);
+  background: url(images/banner.png) no-repeat;
   height: 200px;
   width: 1024px;
   margin: 20px auto;
 }
 
 .board {
-  background: url(images/wood.png);
+  //background: url(images/wood.png);
 }
 
+.chesstable {
+  background: url(images/wood.png) repeat top left;
+  margin: 30px auto 0;
+  .box-shadow(0 2px 1px rgba(0,0,0,.25));
+}
 
-.board-large {
-  .board(@cellSizeLarge);
+.chesstable-large {
+  .chess-table(@cellSizeLarge, 2px);
+  padding: 20px;
 
-  .cell {
-    img {
-      .square(65px);
-      margin: 5px;
-    }
+  .board {
+    .cell {
+      img {
+        .square(65px);
+        margin: 5px;
+      }
 
-    i {
-      display: none;
+      i {
+        display: none;
+      }
     }
   }
 }
 
-.board-small {
-  .board(@cellSizeSmall);
+.chesstable-small {
+  .chess-table(@cellSizeSmall, 2px);
+  padding: 6px;
 
-  .cell {
-    i {
-      margin-top: -2px;
-      margin-left: -1px;
-      color: #1e1e1e;
-      background-image: url(images/glyphicons-halflings.png);
-    }
+  .board {
+    .cell {
+      i {
+        margin-top: -2px;
+        margin-left: -1px;
+        color: #1e1e1e;
+        background-image: url(images/glyphicons-halflings.png);
+      }
 
-    img {
-      display: none;
+      img {
+        display: none;
+      }
     }
   }
 }
+
 .board-actions {
   margin-top: 20px;
   margin-bottom: 20px;
   .text-center;
 }
+
+.cell-row {
+  .clearfix();
+}
+
 .cell {
   float: left;
 }
@@ -152,13 +174,13 @@ body {
   .clearfix();
   height: 60px;
   background-color: @brownBlack;
-  border-top: 2px solid #4d2616;
-  padding: 10px 0;
+  color: @white;
+  border-top: 2px solid @brownLight;
+  padding: 20px 0;
   width: 100%;
+  vertical-align: middle;
 
-  .container {
-    .text-right;
-  }
+  a { color: @white; }
 
   .logo {
     width: 150px;
