--- a/QueensEight.Web/Views/Home/Index.cshtml
+++ b/QueensEight.Web/Views/Home/Index.cshtml
@@ -5,17 +5,21 @@
 <div class="container" ng-controller="GameController">
   <div class="row">
     <div class="span2" ng-controller="SolutionsController">
-      <div class="chesstable chesstable-small">
-        <div class="board" ng-repeat="solution in solutions" ng-controller="BoardController"> </div>
+      <div ng-repeat="solution in solutions" ng-controller="BoardController">
+        <div class="chesstable chesstable-small">
+          <div class="board"></div>
+        </div>
       </div>
     </div>
-    <div class="span10" ng-controller="BoardController" ng-repeat="solution in activeSolutions">
-      <div class="chesstable chesstable-large">
-        <div class="board" interactive></div>
-      </div>
-      <div class="board-actions">
-        <button class="btn btn-primary btn-large" ng-click="requestSolution()">Request Solution</button>
-        <button class="btn btn-primary btn-large" ng-click="clearBoard()">Clear Board</button>
+    <div class="span10">
+      <div ng-controller="BoardController" ng-repeat="solution in activeSolutions">
+        <div class="chesstable chesstable-large">
+          <div class="board" interactive></div>
+        </div>
+        <div class="board-actions">
+          <button class="btn btn-primary btn-large" ng-click="requestSolution()">Request Solution</button>
+          <button class="btn btn-primary btn-large" ng-click="clearBoard()">Clear Board</button>
+        </div>
       </div>
     </div>
   </div>
